<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="@dimen/item_library_book_list_height">

	<ImageView
		android:id="@+id/image"
		android:layout_width="@dimen/item_library_book_list_image_width"
		android:layout_height="@dimen/item_library_book_list_height"
		android:src="@mipmap/pic_library_book_example_big"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/item_library_book_list_height"
		android:layout_toRightOf="@+id/image"
		android:orientation="vertical">

		<LinearLayout
			style="@style/layout_horizontal">

			<TextView
				style="@style/text_hint"
				android:text="@string/item_library_book_hint_title"/>

			<TextView
				android:id="@+id/title"
				style="@style/text"
				android:text="@string/item_library_book_hint_title_example"/>

		</LinearLayout>

		<LinearLayout
			style="@style/layout_horizontal">

			<TextView
				style="@style/text_hint"
				android:text="@string/item_library_book_hint_author"/>

			<TextView
				android:id="@+id/author"
				style="@style/text"
				android:text="@string/item_library_book_hint_author_example"/>

		</LinearLayout>

		<LinearLayout
			style="@style/layout_horizontal">

			<TextView
				style="@style/text_hint"
				android:text="@string/item_library_book_hint_date"/>

			<TextView
				android:id="@+id/date"
				style="@style/text"
				android:text="@string/item_library_book_hint_date_example"/>

		</LinearLayout>

		<LinearLayout
			style="@style/layout_horizontal">

			<TextView
				style="@style/text_hint"
				android:text="@string/item_library_book_hint_publisher"/>

			<TextView
				android:id="@+id/publisher"
				style="@style/text"
				android:text="@string/item_library_book_hint_publisher_example"/>

		</LinearLayout>


	</LinearLayout>


</RelativeLayout>