<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFFFFF">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<include
			layout="@layout/title_bar_subpage"/>

		<RelativeLayout
			android:id="@+id/btn_ecust_wifi"
			style="@style/setting_item_holder">

			<TextView
				style="@style/setting_item_title"
				android:text="@string/title_ecust_wifi"/>
		</RelativeLayout>


		<TextView
			style="@style/decoration_line"/>

		<RelativeLayout
			android:id="@+id/btn_explore_todo"
			android:visibility="gone"
			style="@style/setting_item_holder">

			<TextView
				style="@style/setting_item_title"
				android:text="@string/title_explore_todo"/>
		</RelativeLayout>


		<TextView
			style="@style/decoration_span"/>

		<RelativeLayout
			android:id="@+id/btn_general"
			style="@style/setting_item_holder">

			<TextView
				style="@style/setting_item_title"
				android:text="@string/title_setting_general"/>
		</RelativeLayout>

		<TextView
			style="@style/decoration_span"/>

		<RelativeLayout
			android:id="@+id/btn_about"
			style="@style/setting_item_holder">

			<TextView
				style="@style/setting_item_title"
				android:text="@string/title_about"/>
		</RelativeLayout>


		<TextView
			style="@style/decoration_span"
			android:layout_height="match_parent"/>


	</LinearLayout>

</RelativeLayout>